src/objects/Approver_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Director</fullName>
                </value>
                <value>
                    <fullName>Property Asset Manager</fullName>
                </value>
                <value>
                    <fullName>Serviced Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Head</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tolerance_State__c</fullName>
        <label>Tolerance State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id_on_Quote__c</fullName>
        <description>Set Field API Name from Quote</description>
        <label>User Id on Quote (Field API Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Approver Setting</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>Approver__c</columns>
        <columns>Tolerance_State__c</columns>
        <columns>User_Id__c</columns>
        <columns>User_Id_on_Quote__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <pluralLabel>Approver Settings</pluralLabel>
</CustomObject>